--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,23 +1,17 @@
 FROM debian:bullseye
-# 성공!
 
 RUN apt-get -y update && \
 		apt-get -y upgrade && \
 		apt-get -y install nginx openssl
-# 성공!
+
+RUN	openssl req -newkey rsa:4096 -days 365 -nodes -x509 \
+	-subj "/C=KR/ST=Seoul/L=Seoul/O=42Seoul/OU=Gam/CN=localhost" \
+	-keyout /etc/ssl/private/localhost.dev.key \
+	-out etc/ssl/certs/localhost.dev.crt && \
+	chmod 600 etc/ssl/certs/localhost.dev.crt etc/ssl/private/localhost.dev.key
+
+COPY ./conf/nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 443
 
-COPY ./conf/nginx.conf /etc/nginx/conf.d/default.conf
-COPY ./tools/nginx_setup.sh /var/www/html
-# 성공!
-
-RUN chmod +x /var/www/html/nginx_setup.sh && \
-    ln -sf /dev/stdout /var/log/nginx/access.log && \
-    ln -sf /dev/stderr /var/log/nginx/error.log
-# -rw-r--r-- -> -rwxr-xr-x
-# 성공!
-
-ENTRYPOINT [ "/var/www/html/nginx_setup.sh" ]
-
-CMD ["nginx", "-g", "daemon off;"]
+ENTRYPOINT ["nginx", "-g", "daemon off;"]
