--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,25 +1,33 @@
 server {
+	# 443 포트로 들어오는 https 요청 수신
+	# IPv6 443 포트로 들어오는 https 요청 수신
 	listen 443 ssl;
 	listen [::]:443 ssl;
 
+	# ssl 암호화 사용
 	ssl on;
+	ssl_protocols TLSv1.3;
+	# nginx의 인증서 및 개인키 경로
 	ssl_certificate /etc/ssl/certs/localhost.dev.crt;
 	ssl_certificate_key /etc/ssl/private/localhost.dev.key;
-	ssl_protocols TLSv1.3;
 
-	# php 파일이 존재하는 디텍터리 경로
+	# php 파일이 존재하는 디텍토리 경로
 	root /var/www/html;
 
+	# index 지정
 	index index.php;
 
 	location / {
-		autoindex on;
+		# 요청된 파일이 없는 경우 404 페이지 반환
 		try_files $uri $uri/ = 404;
 	}
 
 	location ~ \.php$ {
+		# PHP FastCGI를 사용하여 PHP 파일을 처리하기 위한 설정 파일을 포함
 		include snippets/fastcgi-php.conf;
+		# php를 실행하기 위한 스크립트 경로
 		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		# 요청을 전달할 컨테이너
 		fastcgi_pass wordpress:9000;
 	}
 }
