[delete] 필요없는 부분 삭제

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -2,15 +2,13 @@ FROM debian:bullseye
 
 RUN apt-get -y update && \
 		apt-get -y upgrade && \
-    apt-get -y install mariadb-server procps
+    apt-get -y install mariadb-server
 
 # 외부 접속 허용
 RUN sed -i "s/127.0.0.1/0.0.0.0/g" /etc/mysql/mariadb.conf.d/50-server.cnf
 
+# 스크립트
 COPY ./tools/db_setup.sh /
-
 RUN chmod +x ./db_setup.sh
-
-EXPOSE 3306
 
 ENTRYPOINT ["/db_setup.sh"]
