--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -2,7 +2,7 @@ FROM debian:bullseye
 
 RUN apt-get -y update && \
 		apt-get -y upgrade && \
-		apt-get -y install nginx openssl
+		apt-get -y install nginx openssl tini
 
 # openssl 공개키 및 개인키 생성
 RUN	openssl req -newkey rsa:4096 -days 365 -nodes -x509 \
@@ -11,7 +11,8 @@ RUN	openssl req -newkey rsa:4096 -days 365 -nodes -x509 \
 	-out etc/ssl/certs/localhost.dev.crt && \
 	chmod 600 etc/ssl/certs/localhost.dev.crt etc/ssl/private/localhost.dev.key
 
+# 컨피그 추가
 COPY ./conf/nginx.conf /etc/nginx/conf.d/default.conf
 
 # nginx 웹 서버를 포그라운드로 실행
-ENTRYPOINT ["nginx", "-g", "daemon off;"]
+ENTRYPOINT ["/usr/bin/tini", "--", "nginx", "-g", "daemon off;"]
