--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -15,11 +15,13 @@ server {
 	# index 지정
 	index index.php;
 
+	# 웹 루트 디렉토리에 대한 요청 처리
 	location / {
 		# 요청된 파일이 없는 경우 404 페이지 반환
 		try_files $uri $uri/ = 404;
 	}
 
+	# 확장자가 .php인 파일에 대한 요청 처리
 	location ~ \.php$ {
 		# PHP FastCGI를 사용하여 PHP 파일을 처리하기 위한 설정 파일을 포함
 		include snippets/fastcgi-php.conf;
